corrected header color and header spacing

--- a/lesson4/css/preston.css
+++ b/lesson4/css/preston.css
@@ -1,6 +1,3 @@
-* {
-    margin: 0 auto;
-}
 
 :root {
     --primary-color: rgb(133, 143, 146);
@@ -29,7 +26,7 @@ header {
     text-align: center;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     font-size: .8em;
 }
@@ -45,7 +42,6 @@ header {
 
 .motto {
     font-style: italic;
-    color: var(--dark-background-font);
     margin:0 0 10px 25px;
 }
 
@@ -55,6 +51,7 @@ header {
 
 main, footer {
     max-width: 900px;
+    margin: 0 auto;
 }
 
 main {
@@ -80,6 +77,10 @@ section {
     flex-direction: column;
 }
 
+section h2 {
+    text-align: center;
+}
+
 article {
     margin: .5em;
     padding: 1em;
@@ -98,11 +99,14 @@ article:hover {
 nav {
     background: var(--accent-color);
     font-family: var(--nav-font);
+    margin: 0 auto;
 }
+
 
 .navi {
     list-style: none;
     padding: 0;
+    margin: 0;
 }
 
 .navi li:first-child {
@@ -141,7 +145,7 @@ footer {
 }
 
 footer a {
-    color: rgb(182, 181, 175);
+    color: white;
 }
 
 footer a:hover {
